--- a/ui/3d-tiles-samples/plc/index.html
+++ b/ui/3d-tiles-samples/plc/index.html
@@ -7,10 +7,9 @@
 <body>
   <div id="cesiumContainer" style="width: 700px; height:400px"></div>
   <script>
-    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJmZDgzOWVlYi00ZmMyLTRkZWItYmQ0OS04MmZmNWRmOTFmMmIiLCJpZCI6NDkxNiwic2NvcGVzIjpbImFzciIsImdjIl0sImlhdCI6MTU0MjAyNzQwM30.AWZo3H818wSZa8Mjk_ataDjcGMLvf2PvYdyNsnMYJmk';
-	var viewer = new Cesium.Viewer('cesiumContainer');
+  var viewer = new Cesium.Viewer('cesiumContainer');
 	var tileset = viewer.scene.primitives.add(new Cesium.Cesium3DTileset({
-		url : 'http://localhost:8003/tilesets/TilesetWithDiscreteLOD/tileset.json'
+		url : '../tilesets/TilesetWithDiscreteLOD/tileset.json'
 	}));
 	viewer.zoomTo(tileset, new Cesium.HeadingPitchRange(0, -0.5, 0));
   </script>
